Fixes ZEN-1745 overflow on the element for Chrome. reviewed by jhanson.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@58712 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -1557,7 +1557,7 @@ pre {
     background-color: rgb(240, 240, 240) !important;
 }
 */
-.x-ie .white-background-panel .x-fieldset-body, .x-ie .white-background-panel .x-fieldset{
+.x-ie .white-background-panel .x-fieldset-body, .x-ie .white-background-panel .x-fieldset, legend{
     overflow:visible !important;
 }
 .zenportlet .x-container-default{
